-------------------------------------------------------
==04/03/2010==
Trevius: SoF/SoD - Total Spent AA Points now show correctly for these 2 clients.
Trevius: Froglok characters now default to size 5 instead of 7.  This corrects size issues when using illusions.
Derision: SoD - Bazaar Trader Mode/Bazaar Search should now work correctly.
Derision: SoD - Found the helm field in the spawn struct.

==04/02/2010==
Derision: SoD - Group Leadership AA should mostly work (Main Assist is no longer a GLAA and Health Awareness seems intermittent).
joligario: Pet behavious change.
Trevius: SoF/SoD - Added clicky item checks to match previous clients. All clicky item hacker entries should now be actual hack attempts.
Trevius: Added an extra hacker check for clicking a must equip effect without having it equipped.
Trevius: SoD - Removed the opcodes for the Pet Buff Window until the structure is updated.  Prevents pet classes from crashing when pets are buffed.
Derision: SoD - Pet Buff Window now works.
Derision: SoD - Fixed OnLevelMessage struct (popup windows).
Derision: SoD - Fixed Barter mode.
Congdar: (Taurinus) Drakkin bots

==04/01/2010==
Derision: SoD - Tracking
Derision: SoD - Fixed price bug when buying from merchants.
Trevius: SoD - Spell books now display all scribed spells (was previously hiding the first 9 slots).
Trevius: SoD - Stopped the Barter error that was reporting when logging in due to an incorrect opcode.

==03/31/2010==
Derision: SoD - Groups should be as functional as previous clients, except Group Leadership AA doesn't work.
Derision: SoD - Fixed items being incorrectly flagged as No Trade/Copied

==03/30/2010==
Trevius: SoD - Corrected the opcode for Mob Health Updates so they update properly.
Trevius: SoD - Added a few new Opcodes and Structures for SoD packets that aren't used yet.


==03/28/2010==

Derision: SoD - Fixed client animation/runspeed glitch.
Derision: All Clients - Player position updates to other players should be more accurate.