@@ -472,3 +472,4 @@ N(OP_GroupDisbandOther),
 N(OP_GroupLeaderChange),
 N(OP_GroupLeadershipAAUpdate),
 N(OP_GroupRoles),
+N(OP_SendFindableNPCs),
